--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,12 +5,21 @@ on:
     inputs:
       deploy-netlify:
         type: boolean
+        description: Enable Netlify deployment
         default: true
-        description: "Enable netlify deployment"
+      deploy-vercel:
+        type: boolean
+        description: Enable Vercel deployment
+        default: true
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+      NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -22,18 +31,34 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-    
-      - name: Build project
+
+      - name: Run unit tests
+        run: npm run test
+
+      - name: Build app
         run: npm run build
 
       - name: Deploy to Netlify
-        if: ${{ inputs.deploy-netlify }}
         uses: nwtgck/actions-netlify@v3.0
+        if: ${{ inputs.deploy-netlify }}
         with:
           publish-dir: './dist'
           production-branch: master
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: "Deploy from GitHub Actions"
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          deploy-message: 'Deployed from GitHub Actions'
+
+      - name: Install Vercel CLI
+        if: ${{ inputs.deploy-vercel }}
+        run: npm install --global vercel@canary
+
+      - name: Pull Vercel Environment Information
+        if: ${{ inputs.deploy-vercel }}
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Build for Vercel
+        if: ${{ inputs.deploy-vercel }}
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Deploy to Vercel
+        if: ${{ inputs.deploy-vercel }}
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
