--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,21 +1,26 @@
-name: Pull Request Workflow
+name: Deploy
 
 on:
   pull_request:
+    branches: 
+      - master
 
 jobs:
-  verify-pr:
+  deploy:
     runs-on: ubuntu-latest
+    env:
+      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Configure node
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
 
-      - name: Install deps
+      - name: Install dependencies
         run: npm ci
 
       - name: Lint code
@@ -24,5 +29,30 @@ jobs:
       - name: Run unit tests
         run: npm run test
 
-      - name: Build project
+      - name: Build app
         run: npm run build
+
+      - name: Deploy to Netlify
+        uses: nwtgck/actions-netlify@v3.0
+        if: ${{ inputs.deploy-netlify }}
+        with:
+          publish-dir: './dist'
+          production-branch: master
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          deploy-message: 'Deployed from GitHub Actions'
+
+      - name: Install Vercel CLI
+        if: ${{ inputs.deploy-vercel }}
+        run: npm install --global vercel@canary
+
+      - name: Pull Vercel Environment Information
+        if: ${{ inputs.deploy-vercel }}
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Build for Vercel
+        if: ${{ inputs.deploy-vercel }}
+        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Deploy to Vercel
+        if: ${{ inputs.deploy-vercel }}
+        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
