--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,6 @@ jobs:
 
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v3.0
-        if: ${{ inputs.deploy-netlify }}
         with:
           publish-dir: './dist'
           production-branch: master
@@ -44,17 +43,29 @@ jobs:
           deploy-message: 'Deployed from GitHub Actions'
 
       - name: Install Vercel CLI
-        if: ${{ inputs.deploy-vercel }}
         run: npm install --global vercel@canary
 
       - name: Pull Vercel Environment Information
-        if: ${{ inputs.deploy-vercel }}
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build for Vercel
-        if: ${{ inputs.deploy-vercel }}
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy to Vercel
-        if: ${{ inputs.deploy-vercel }}
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: |
+          DEPLOY_OUTPUT="$(vercel deploy --token=${{secrets.VERCEL_TOKEN}})"
+          DEPLOY_URL=$(echo "$DEPLOY_OUTPUT" | grep http | tail -n 1)
+          echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
+
+      - name: Comment a pull request with preview Vercel URL
+        uses: actions/github-script@v8
+        with:
+          script: |
+           const { DEPLOY_URL} = process.env
+           github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: 'Preview URL: ${DEPLOY_URL}'
+           })
+      
