--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,20 +52,4 @@ jobs:
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy to Vercel
-        run: |
-          DEPLOY_OUTPUT="$(vercel deploy --token=${{secrets.VERCEL_TOKEN}})"
-          DEPLOY_URL=$(echo "$DEPLOY_OUTPUT" | grep http | tail -n 1)
-          echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
-
-      - name: Comment a pull request with preview Vercel URL
-        uses: actions/github-script@v8
-        with:
-          script: |
-           const { DEPLOY_URL} = process.env
-           github.rest.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: 'Preview URL: ${DEPLOY_URL}'
-           })
-      
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
