--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,13 +18,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Configure node
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
-
-      - name: Install dependencies
-        run: npm ci
-
+        uses: ./.github/actions/setup-project
+          
       - name: Lint code
         run: npm run lint
 
@@ -45,11 +40,11 @@ jobs:
       - name: Install Vercel CLI
         run: npm install --global vercel@canary
 
-      - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Build for Vercel
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Deploy to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy app to vercel production env
+        uses: ././github/actions/deploy-vercel
+        with:
+          mode: 'production'
+          vercel-token: ${{secrets.VERCEL_TOKEN}}
+        env:
+          VERCEL_ORG_ID: ${{secrets.VERCEL_ORG_ID}}
+          VERCEL_PROJECT_ID: ${{secrets.VERCEL_PROJECT_ID}}
