--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -32,29 +32,11 @@ jobs:
       - name: Build app
         run: npm run build
 
-      - name: Install Vercel CLI
-        run: npm install --global vercel@canary
-
-      - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Build for Vercel
-        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Deploy to Vercel
-        run: |
-          DEPLOY_OUTPUT="$(vercel deploy --token=${{secrets.VERCEL_TOKEN}})"
-          DEPLOY_URL=$(echo "$DEPLOY_OUTPUT" | grep http | tail -n 1)
-          echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
-
-      - name: Comment a pull request with preview Vercel URL
-        uses: actions/github-script@v8
+      - name: Deploy app to Vercel PREVIEW env
+        uses: ./.github/actions/deploy-vercel
         with:
-          script: |
-           const { DEPLOY_URL} = process.env
-           github.rest.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: `Preview URL: ${DEPLOY_URL}`
-           })
+          mode: 'preview'
+          vercel-token: ${{secrets.VERCEL_TOKEN}}
+        env:
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
