Enhanced Vercel deployment workflow by extracting the deployment URL from the output and saving it to the GitHub environment. Updated pull request workflow to utilize a custom setup action for node configuration, improving efficiency.

--- a/.github/actions/deploy-vercel/action.yml
+++ b/.github/actions/deploy-vercel/action.yml
@@ -31,6 +31,8 @@ runs:
         vercel pull --yes --environment=production --token=${{ inputs.vercel-token }}
         vercel build --token=${{ inputs.vercel-token }}
         DEPLOY_OUTPUT="$(vercel deploy --token=${{ inputs.vercel-token }})"
+        DEPLOY_URL=$(echo "$DEPLOY_OUTPUT" | grep http | tail -n 1)
+        echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
       shell: bash
 
     - name: Comment a pull request with preview Vercel URL
