--- a/.github/actions/deploy-vercel/action.yml
+++ b/.github/actions/deploy-vercel/action.yml
@@ -28,7 +28,7 @@ runs:
     - name: PREVIEW Vercel Deployment
       if: ${{ inputs.mode == 'preview' }}
       run: |
-        vercel pull --yes --environment=production --token=${{ inputs.vercel-token }}
+        vercel pull --yes --environment=preview --token=${{ inputs.vercel-token }}
         vercel build --token=${{ inputs.vercel-token }}
         DEPLOY_OUTPUT="$(vercel deploy --token=${{ inputs.vercel-token }})"
         DEPLOY_URL=$(echo "$DEPLOY_OUTPUT" | grep http | tail -n 1)
@@ -45,5 +45,5 @@ runs:
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: `Preview URL: ${DEPLOY_URL}`
+            body: `🔍 Preview URL: ${DEPLOY_URL}`
            })
