--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,5 +11,6 @@ jobs:
     secrets: inherit
 
   deploy-vercel:
+    needs: deploy-netlify
     uses: ./.github/workflows/deploy-vercel.yml
     secrets: inherit
