--- a/.github/actions/deploy-vercel/action.yml
+++ b/.github/actions/deploy-vercel/action.yml
@@ -23,6 +23,8 @@ runs:
         vercel pull --yes --environment=production --token=${{ inputs.vercel-token }}
         vercel build --prod --token=${{ inputs.vercel-token }}
         vercel deploy --prebuilt --prod --token=${{ inputs.vercel-token }}
+      env:
+        VITE_ENVIRONMENT: 'Staging'
       shell: bash
 
     - name: PREVIEW Vercel Deployment
@@ -30,9 +32,11 @@ runs:
       run: |
         vercel pull --yes --environment=preview --token=${{ inputs.vercel-token }}
         vercel build --token=${{ inputs.vercel-token }}
-        DEPLOY_OUTPUT="$(vercel deploy --token=${{ inputs.vercel-token }})"
+        DEPLOY_OUTPUT="$(vercel deploy --prebuilt --token=${{ inputs.vercel-token }})"
         DEPLOY_URL=$(echo "$DEPLOY_OUTPUT" | grep http | tail -n 1)
         echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
+      env:
+        VITE_ENVIRONMENT: 'Preview'
       shell: bash
 
     - name: Comment a pull request with preview Vercel URL
