Added bash shell specification for linting and testing steps in the GitHub action configuration to ensure consistent execution environment.

--- a/.github/actions/check-quality-and-tests/action.yml
+++ b/.github/actions/check-quality-and-tests/action.yml
@@ -6,6 +6,8 @@ runs:
   steps:
     - name: Lint code
       run: npm run lint
+      shell: bash
 
     - name: Run unit tests
       run: npm run test
+      shell: bash
