Updated environment variable configuration in Vercel deployment action to correctly reference the DEPLOY_URL using GitHub's environment syntax, ensuring proper functionality in end-to-end tests.

--- a/.github/actions/deploy-vercel/action.yml
+++ b/.github/actions/deploy-vercel/action.yml
@@ -33,7 +33,7 @@ runs:
       if: ${{inputs.mode == 'production'}}
       uses: ./.github/actions/run-e2e-tests
       env: 
-        E2E_BASE_URL: `DEPLOY_URL` 
+        E2E_BASE_URL: ${{ env.DEPLOY_URL }}
 
     - name: PREVIEW Vercel Deployment
       if: ${{ inputs.mode == 'preview' }}
