--- a/.github/actions/deploy-vercel/action.yml
+++ b/.github/actions/deploy-vercel/action.yml
@@ -64,4 +64,4 @@ runs:
       if: ${{inputs.mode == 'preview'}}
       uses: ./.github/actions/run-e2e-tests
       env: 
-        E2E_BASE_URL: `DEPLOY_URL` 
+        E2E_BASE_URL: ${{ env.DEPLOY_URL }}
