Updated Playwright configuration to reduce timeout settings for tests and added environment variable for E2E base URL in GitHub action for end-to-end testing.

--- a/.github/actions/run-e2e-tests/action.yml
+++ b/.github/actions/run-e2e-tests/action.yml
@@ -11,4 +11,6 @@ runs:
 
     - name: run e2e tests
       run: npm run test:e2e
+      env:
+        E2E_BASE_URL: "$E2E_BASE_URL"
       shell: bash
