--- a/.github/actions/deploy-vercel/action.yml
+++ b/.github/actions/deploy-vercel/action.yml
@@ -25,6 +25,7 @@ runs:
         DEPLOY_OUTPUT="$(vercel deploy --prebuilt --prod --token=${{ inputs.vercel-token }})"
         DEPLOY_URL=$(echo "$DEPLOY_OUTPUT" | grep http | tail -n 1)
         echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
+        echo "E2E_BASE_URL=$DEPLOY_URL" >> $GITHUB_ENV
       env:
         VITE_ENVIRONMENT: 'Staging'
       shell: bash
@@ -32,8 +33,6 @@ runs:
     - name: Run e2e tests on Vercel PROD env
       if: ${{inputs.mode == 'production'}}
       uses: ./.github/actions/run-e2e-tests
-      env: 
-        E2E_BASE_URL: ${{ env.DEPLOY_URL }}
 
     - name: PREVIEW Vercel Deployment
       if: ${{ inputs.mode == 'preview' }}
@@ -43,6 +42,7 @@ runs:
         DEPLOY_OUTPUT="$(vercel deploy --prebuilt --token=${{ inputs.vercel-token }})"
         DEPLOY_URL=$(echo "$DEPLOY_OUTPUT" | grep http | tail -n 1)
         echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
+        echo "E2E_BASE_URL=$DEPLOY_URL" >> $GITHUB_ENV
       env:
         VITE_ENVIRONMENT: 'Preview'
       shell: bash
@@ -63,5 +63,3 @@ runs:
     - name: Run e2e tests on Vercel PREVIEW env
       if: ${{inputs.mode == 'preview'}}
       uses: ./.github/actions/run-e2e-tests
-      env: 
-        E2E_BASE_URL: ${{ env.DEPLOY_URL }}
