Refactored Playwright configuration to dynamically set base URL based on CI environment, improving flexibility for local and CI testing. Updated GitHub action to print Vercel organization ID and retain existing print statement for automation bypass secret.

--- a/.github/actions/run-e2e-tests/action.yml
+++ b/.github/actions/run-e2e-tests/action.yml
@@ -6,11 +6,13 @@ runs:
   steps:
 
     - name: print base url
+      run: echo "$VERCEL_ORG_ID"
+      shell: bash
+
+    - name: print base url
       run: echo "$VERCEL_AUTOMATION_BYPASS_SECRET"
       shell: bash
 
     - name: run e2e tests
       run: npm run test:e2e
-      env:
-        E2E_BASE_URL: ${{ env.DEPLOY_URL}}
       shell: bash
